--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link type="image/png" sizes="32x32" rel="icon" href="/public/icons8-treehouse-32.png">
+  <link type="image/png" sizes="32x32" rel="icon" href="/icons8-treehouse-32.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ShareB&B</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
