--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link type="image/png" sizes="32x32" rel="icon" href="/icons8-treehouse-32.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Outdoor space sharing application for listing and booking spaces.">
   <title>ShareB&B</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
